# MagneticSimulation

./: CMakeLists.txt  MagneticSimulation.sln.DotSettings  Readme.md
cmake/: eigen.cmake  qt5.cmake  spdlog.cmake
exemples/boucle/: boucle.xml  matricebcentre.txt
exemples/magnetic_pot/: magnetic_pot.xml
exemples/spire_noyau/: spire_noyau.xml
exemples/spire_noyau_grand/: spire_noyau.xml
exemples/spire_noyau_moyen/: spire_noyau.xml
exemples/triple_boucle/: triple_boucle.xml
exemples/triple_boucle_inverse/: triple_boucle_inverse.xml
simulateur/: CMakeLists.txt  consoleapplication.cpp  consoleapplication.h  constants.h  contour.cpp  contour.h  export_image.cpp  export_image.h  export_vtk.cpp  export_vtk.h  forme.cpp  forme.h  formecercle.cpp  formecercle.h  formepolygone.cpp  formepolygone.h  interfacexml.cpp  interfacexml.h  magneticsimulation.cpp  magneticsimulation.h  main.cpp  renduimage.cpp  renduimage.h  scene.cpp  scene.h  shape.cpp  shape.h  shapecircle.cpp  shapecircle.h  shapepolygon.cpp  shapepolygon.h  simulateur.cpp  simulateur.h  solver.cpp  solver.h  solvercolpivhouseholderqr.cpp  solvercolpivhouseholderqr.h  solverdense.cpp  solverdense.h  solversparse.cpp  (+15 more)
